--- a/DIWorkshop/DIWorkshop.ConsoleProject/DIWorkshop.ConsoleProject.csproj
+++ b/DIWorkshop/DIWorkshop.ConsoleProject/DIWorkshop.ConsoleProject.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C4E6B0A2-043A-4A4A-AA07-5545B45C9845}</ProjectGuid>
+    <ProjectGuid>{5D4F33FC-0485-4FD5-B520-785416023E21}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DIWorkshop.Console</RootNamespace>
-    <AssemblyName>DIWorkshop.Console</AssemblyName>
+    <RootNamespace>DIWorkshop.ConsoleProject</RootNamespace>
+    <AssemblyName>DIWorkshop.ConsoleProject</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
