Added Homework project

--- a/DIWorkshop/DIWorkshop.Managers/DIWorkshop.Managers.csproj
+++ b/DIWorkshop/DIWorkshop.Managers/DIWorkshop.Managers.csproj
@@ -53,6 +53,10 @@
       <Project>{AD71DF34-B1DF-4EAA-85B9-0DF8D464AF25}</Project>
       <Name>DIWorkshop.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DIWorkshop.Persistence\DIWorkshop.Persistence.csproj">
+      <Project>{AC99EF18-70F8-47A0-B693-8BECE81A07EA}</Project>
+      <Name>DIWorkshop.Persistence</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
